# MachineLearningJourney

./: .gitignore  LICENSE  README.md  pyproject.toml
chapter2/: download_housing_data.py  housing_initial_look_and_modeling.ipynb
chapter2/exercises/: exercies.ipynb
