[tool.poetry]
name = "machinelearningjourney"
version = "0.1.0"
description = ""
authors = ["colin-grebenstein <grebensteinforsoftware@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"
sklearn = "^0.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
streamlit = "^1.0.0"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
